--- a/Assets/Styles.css
+++ b/Assets/Styles.css
@@ -46,9 +46,9 @@ margin: 0 10px;
 /* My CSS */
 
 #welcome {
-    
+    font-family: "Luminari", "Trattatello", "Apple Chancery", "cursive";
 }
 
 #youLookTired {
-
+    font-family: "Apple Chancery", "cursive";
 }
