--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,10 +46,10 @@ margin: 0 10px;
 /* My CSS */
 
 h1 { 
-    font-family: "Luminari", "Trattatello", "Apple Chancery", "cursive";
+    font-family: "Luminari", "Trattatello", "Apple Chancery", cursive;
 }
 
 p { 
-    font-family: "Apple Chancery", "cursive"; 
+    font-family: "Apple Chancery", cursive; 
 }
 
